--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
 
     <!-- Controllers -->
     <script src="/app/pages/search/search.controller.js"></script>
+
+    <!-- Services -->
+    <script src="/app/services/timeline.service.js"></script>
 </body>
 </html>
