--- a/app/pages/search/search.html
+++ b/app/pages/search/search.html
@@ -1,1 +1,12 @@
 <h1>I'M on search page</h1>
+
+<form>
+    <label for="category_input">Categoria:</label>
+    <input type="text" id="category_input" ng-model="filters.category">
+</form>
+
+<div ng-repeat="media in timelineData">
+    <img src="{{media.thumbnail}}" alt="not loaded" width="50px" height="50px">
+    <p>{{media.type}}</p>
+    <p>{{media.description}}</p>
+</div>
