Criado o sistema de filtragem

--- a/index.html
+++ b/index.html
@@ -28,5 +28,8 @@
     
     <!-- Services -->
     <script src="/app/services/timeline.service.js"></script>
+
+    <!-- Filters -->
+    <script src="/app/filters/timeline-data.filter.js"></script>
 </body>
 </html>
