--- a/index.html
+++ b/index.html
@@ -32,5 +32,9 @@
 
     <!-- Filters -->
     <script src="/app/filters/timeline-data.filter.js"></script>
+    <script src="/app/filters/ucfirst.filter.js"></script>
+
+    <!-- Directives -->
+    <script src="/app/directives/media-card/media-card.directive.js"></script>
 </body>
 </html>
